# libusb

./: CMakeLists.txt
android/jni/: Android.mk
libusb/: core.c  libusb.h  libusbi.h
libusb/os/: linux_udev.c  linux_usbfs.c  linux_usbfs.h  windows_winusb.c
